--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,8 +1,12 @@
 <%= render @post %>
 
 <div>
-  <%= link_to "Edit this post", edit_post_path(@post) %> |
+  <% if @post.user == current_user %>
+    <%= link_to "Edit this post", edit_post_path(@post) %> |
+  <% end %>
   <%= link_to "Back to posts", posts_path %>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
+  <% if @post.user == current_user %>
+    <%= button_to "Destroy this post", @post, method: :delete %>
+  <% end %>
 </div>
