--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,13 @@
       <p class="alert alert-danger"><%= alert %></p>
     <% end %>
 
+    <% if user_signed_in? %>
+      <li><%= link_to "Sign out", destroy_user_session_path, data: { turbo_method: :delete }  %></li>
+    <% else %>
+      <li><%= link_to "Login", new_user_session_path %></li>
+      <li><%= link_to "Sign Up", new_user_registration_path %></li>
+    <% end %>
+
     <%= yield %>
   </body>
 </html>
